--- a/public/css/site.styl
+++ b/public/css/site.styl
@@ -1,5 +1,5 @@
 body 
-  padding-top 61px
+  padding-top 69px
 
 .navbar-header a.navbar-brand
   margin-top -15px
@@ -19,8 +19,14 @@ footer
   button
     margin-left 10px
 
+.top-padding-med
+  padding-top 10px
+
+.margin-left-med
+  margin-left 10px    
+
 .toast-top-right
   top 70px
 
 .toast-success
-  background-color red
+  background-color green
